BUGFIX fixed bug, where selected features in extraction experiment were not updated correctly, if a new file is added