@@ -37,7 +37,6 @@ import amuse.data.Feature;
 import amuse.data.FeatureTable;
 import amuse.data.io.ArffDataSet;
 import amuse.data.io.DataSetAbstract;
-import amuse.data.io.attributes.NumericAttribute;
 import amuse.data.io.attributes.StringAttribute;
 import amuse.scheduler.gui.dialogs.SelectArffFileChooser;
 
@@ -168,11 +167,11 @@ public class FeatureTableController implements ActionListener {
             	Integer id = null;
             	Integer confId = null;
                 if(idString.contains("_")) {
-                	id = new Double(idString.substring(0, idString.indexOf("_"))).intValue();
-                	confId = new Double(idString.substring(idString.indexOf("_") + 1)).intValue();
+                	id = Double.valueOf(idString.substring(0, idString.indexOf("_"))).intValue();
+                	confId = Double.valueOf(idString.substring(idString.indexOf("_") + 1)).intValue();
                 	containsCustomFeatures = true;
                 } else {
-                	id = new Double(idString).intValue();
+                	id = Double.valueOf(idString).intValue();
                 }
                 ids.add(id);
                 confIds.add(confId);
